Borked file enc/dec
